--- a/pages/kobaton/style.css
+++ b/pages/kobaton/style.css
@@ -2,3 +2,17 @@
   margin: 0;
   padding: 0;
 }
+ h1 {
+   text-align: center;
+   margin-top: 20px;
+ }
+
+p {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+img {
+  margin-top: 20px;
+}
