--- a/pages/apple/style.css
+++ b/pages/apple/style.css
@@ -35,9 +35,11 @@ html {
     
 }
 
-a:hover {
-    background-color: rgba(0,0,0,0.5);
-    color:#252427;
-    transition: 1s;
+p:hover{
+    background-color: rgba(255,255,255,0.5);
+    color:#111111;
+    transition:1s;
 }
+
+
 
