--- a/pages/ed/style.css
+++ b/pages/ed/style.css
@@ -1,1 +1,29 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
+h3 {
+    height: 300px;
+    width: 500px;
+    text-align: center;
+    vertical-align: center;
+}
+
+h1 {
+    height: 75px;
+    width: 500px;
+    text-align: center;
+    float: left;
+    vertical-align: center;
+    font-family:sans-serif;
+    font-size: 50px;
+}
+
+img {
+    width: 50%;
+}
+
+.texts{
+    float: left;
+}
