--- a/pages/yuiponzu/style.css
+++ b/pages/yuiponzu/style.css
@@ -1,8 +1,27 @@
 * {
     margin: 0;
-    padding: 0;
+    width: 100%;
 }
 
-body{
-    border-image: url(bunbun.JPG)
+body {
+    width: 100%;
+    background: #fff url(bg.jpg) 0 0 no-repeat;
+    background-size: cover;
+}
+
+h1 {
+    margin-top: 20px;
+    font-size: 50px;
+    color: #19658d;
+    text-align: center;
+    font-family: 'Comfortaa', cursive;
+}
+
+.name {
+    width: 300px;
+    margin: 0px auto;
+}
+
+img{
+    margin-top: 20px;
 }
