--- a/haiji.css
+++ b/haiji.css
@@ -12,7 +12,7 @@
 .about h1{
     color:#BBBBBB;
     margin: 40px;
-    padding: 10px;
+    padding-bottom: 10px;
     border: dotted #008080;
     
     width: 500px;
