--- a/pages/tenor/style.css
+++ b/pages/tenor/style.css
@@ -1,7 +1,37 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    width: 100%;
+    min-width: 300px;
+    height: 100%;
+}
+
 header {
     width: 100%;
     height: 100%;
     background-image: url(desk.jpg);
     background-size: cover;
-
+    text-align: center;
+}
+h1{
+    padding-top:300px;
+    padding-bottom: 100px;
+}
+header a{
+    text-decoration: none;
+    border: 1px #000000 solid;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 17px;
+}
+header a:hover{
+    color: #f5b2ac;
 }
