--- a/pages/nino/main.css
+++ b/pages/nino/main.css
@@ -1,3 +1,9 @@
 header{
     text-align: center;
+    background-image: url("images/%E3%81%AB%E3%81%AE%EF%BC%95.jpg" );
+    background-size: cover;       
+}
+
+nametitle{
+    padding-top: 50px;
 }
