--- a/pages/nurse/style.css
+++ b/pages/nurse/style.css
@@ -5,9 +5,13 @@ padding:0;
 
 body{
     background-color:currentColor;
-    margin: 0;
-    padding: 0;
+}
 
+
+.intro img{
+    width: 900px;
+    height: 900px;
+  
 }
 .intro{
     position: relative;
@@ -15,9 +19,8 @@ body{
 .intro p{
     position: absolute;
     color:aliceblue;
-    font-size: 60px;
-    font-size: 60px;
+    font-size: 80px;
     top:40%;
-    left: 60%;
+    left: 70%;
     font-family: fantasy;
 }
