--- a/pages/patra/style.css
+++ b/pages/patra/style.css
@@ -1,9 +1,19 @@
 *{
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
 .top{
+    
     margin: auto;
+    
+    text-align: center;
     font-family: 'Poiret One', cursive;
+    width: 500px;
+    
+}
+
+img{
+    width: 500px;
+    border-radius: 20px;
 }
