--- a/pages/yuiponzu/style.css
+++ b/pages/yuiponzu/style.css
@@ -10,27 +10,28 @@ body {
 }
 
 h1 {
-    margin-top: 20px;
-    font-size: 50px;
+    margin: 20px 0px;
+    font-size: 60px;
     color: #19658d;
     text-align: center;
     font-family: 'Comfortaa', cursive;
 }
 
 .name {
-    width: 500px;
+    width: 550px;
+    height: 500px;
     margin: 0px auto;
+    background: rgb(255, 255, 255, 0.5);
 }
 
 img{
     width: 300px;
-    margin-top: 20px;
+    margin: 20px;
     float: left;
 }
 
 .text{
     margin: 30px;
-    margin-left: 20px;
     width: 100px;
     float: left;
 }
