--- a/pages/ed/style.css
+++ b/pages/ed/style.css
@@ -9,10 +9,12 @@ h3 {
     width: 600px;
     text-align: center;
     line-height: 550px;
+    letter-spacing: 0.5em;
     font-family: 'Thasadith', sans-serif;
 }
 
 h1 {
+    letter-spacing: 0.2em;
     height: 75px;
     line-height: 75px;
     width: 600px;
@@ -25,8 +27,14 @@ h1 {
 }
 
 img {
-    width: 600px;
+    filter: grayscale(100%);
+    width: 680px;
     margin-top: -100px;
+}
+
+img:hover {
+    filter: grayscale(0%);
+    transition-duration: 0.8s;
 }
 
 .texts{
