--- a/pages/captain/style.css
+++ b/pages/captain/style.css
@@ -11,5 +11,7 @@ header{
 
 h1{
     text-align: center;
-    font-size: 50px;
+    font-size: 120px;
+    line-height: 100vh;
+    color:#000000;
 }
